fixed divs spacing on results

--- a/stylesheets/idk.css
+++ b/stylesheets/idk.css
@@ -8,6 +8,10 @@ body {
   margin-top: 0;
 }
 
+#contain {
+  overflow: auto;
+}
+
 h1 {
   color: white;
   font-size: 40px;
@@ -134,6 +138,7 @@ p {
 
 #left {
   float: left;
+  /*right: 350px;*/
   width: 49%;
 }
 
@@ -146,7 +151,7 @@ p {
 }
 
 #right {
-  float: right;
+  float: left;
   width: 49%;
 }
 
